modified:   nbs/index.ipynb 	modified:   nbs/run_picrust.ipynb 	scripts/*

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -22,7 +22,7 @@
     "* PICRUSt is thus an extrapolation of the 16s data. \n",
     "----\n",
     "\n",
-    "#### Rationale behind mkaing this ipython notebooks\n",
+    "#### Rationale behind making this ipython notebooks\n",
     "\n",
     "* I have been analysing several metagenomic dataset for quite some time and I wish to organise all the scripts, tips and tricks I have learned from these studies.\n",
     "\n",
